spring-boot-demo/kubernetes/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-demo
  name: spring-boot-demo-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-boot-demo
  type: LoadBalancer
